src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AF_Agency_Fees_User_Type__c</fullName>
        <label>Agency Fees User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMCO Super User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMCO User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Category Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Brand__c</fullName>
        <description>This represents Brands on the user level</description>
        <inlineHelpText>List of brands assigned to user</inlineHelpText>
        <label>Brand</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AF_Categories__c</fullName>
        <description>Used in Report Filter</description>
        <label>Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Category__c</fullName>
        <description>This represents the categories</description>
        <inlineHelpText>List of Categories assigned to the user</inlineHelpText>
        <label>Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AF_UserTypeText__c</fullName>
        <externalId>true</externalId>
        <label>AF_UserTypeText</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Terms_of_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field use to determine if the Terms of Use should be presented</description>
        <label>Accepted Terms of Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advisor_Correspondence_Display_Name__c</fullName>
        <description>CEC: To capture the advisor correspondence display name. This will be used in email and letters,</description>
        <label>Advisor Correspondence Display Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEC_Disable_Case_Trigger__c</fullName>
        <description>CEC - Check whether the case trigger execution should be disabled or not</description>
        <formula>$Permission.CEC_Disable_Case_Trigger</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CEC Disable Case Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CEC_User_Reference__c</fullName>
        <description>CEC - This field is used to contain reference text that can be filtered using a view on the user record to simplify the user creation process and reduce errors.</description>
        <label>CEC User Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CannotChangeMC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CannotChangeMC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debit_Card_Refund_Limit__c</fullName>
        <description>CEC Debit Card Refund Limit is used to capture the user’s refund limit</description>
        <label>Debit Card Refund Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_Voucher_Refund_Limit__c</fullName>
        <description>CEC E-Voucher Refund Limit capture&apos;s the user’s refund limit</description>
        <label>E-Voucher Refund Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edit_Article_Template_Front_End__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ability to change the article content in the front end (the button Edit will be visible)</description>
        <inlineHelpText>Ability to change the article content in the front end (the button Edit will be visible)</inlineHelpText>
        <label>Edit Article Template Front End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Behaviour Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise and Technology Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Contributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GHG/Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homecare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refreshments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Sourcing &amp; Livelihoods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UL Foundation &amp; Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waste</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>Unilever Job Function driven from ADAM field: unileverBusinessFunctionDescription</description>
        <inlineHelpText>Your Unilever Job Function. This field is automatically populated/updated for Unilever users each week.</inlineHelpText>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research/Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplace Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICB_CPF__c</fullName>
        <description>CPF (Cadastro de Pessoa Fisica) of the user.</description>
        <label>CPF</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ICB_Matricula__c</fullName>
        <description>User identification at SAP</description>
        <label>Matricula</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICB_Registration__c</fullName>
        <description>User identification at SAP</description>
        <externalId>true</externalId>
        <label>Matricula</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Brand_Name__c</fullName>
        <description>to store brand name from AD</description>
        <label>Brand Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Brand_Positioning__c</fullName>
        <label>Brand Positioning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Category__c</fullName>
        <description>to store category of user(information will be fetch from AD)</description>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Role__c</fullName>
        <description>to stroe role from AD</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Project Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gate Keeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language_Skills_List__c</fullName>
        <description>CEC: This field holds the list of all language skills from the multi-select picklist</description>
        <label>Language Skills List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>CEC: Language skills held by the user</description>
        <inlineHelpText>Language skills held by the user</inlineHelpText>
        <label>Language Skill</label>
        <picklist>
            <controllingField>Market__c</controllingField>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flemish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moldavian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovenian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Letter_Quality_Check_Percentage__c</fullName>
        <description>CEC Letter Quality Check Percentage is used to assign quality percentages for advisor&apos;s which define what percentage of their thunderhead letters get send for quality check.</description>
        <label>Letter Quality Check Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MCO__c</fullName>
        <description>Unilever MCO imported from ADAM field: unileverMCO</description>
        <inlineHelpText>Your Unilever MCO. This field is automatically populated/updated for Unilever users each week.</inlineHelpText>
        <label>MCO</label>
        <picklist>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East and Southern Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong,Korea &amp; Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia &amp; Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico &amp; Greater Carribean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nigeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Cone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sri Lanka</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Cluster__c</fullName>
        <description>Unilever Market Cluster imported from ADAM field: unileverMarketCluster</description>
        <inlineHelpText>Your Unilever Market Cluster. This field is automatically populated/updated for Unilever users each week.</inlineHelpText>
        <label>Market Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAMET &amp; RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Cone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sri Lanka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnam</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Refund_Amount__c</fullName>
        <description>CEC: Max refund amount Advisors can provide</description>
        <formula>IF( ISPICKVAL(Refund_Authorization_Limit__c , &quot;Level 1&quot;) , $Setup.CEC_Cheque_Authorization_Limit__c.Level_1__c,
 IF( ISPICKVAL(Refund_Authorization_Limit__c , &quot;Level 2&quot;) , $Setup.CEC_Cheque_Authorization_Limit__c.Level_2__c,
 IF( ISPICKVAL(Refund_Authorization_Limit__c , &quot;Level 3&quot;) , $Setup.CEC_Cheque_Authorization_Limit__c.Level_3__c,
 IF( ISPICKVAL(Refund_Authorization_Limit__c , &quot;Level 4&quot;) , $Setup.CEC_Cheque_Authorization_Limit__c.Level_4__c,
 IF( ISPICKVAL(Refund_Authorization_Limit__c , &quot;Level 5&quot;) , $Setup.CEC_Cheque_Authorization_Limit__c.Level_5__c,
 IF( ISPICKVAL(Refund_Authorization_Limit__c , &quot;Level 6&quot;) , $Setup.CEC_Cheque_Authorization_Limit__c.Level_6__c,
 IF( ISPICKVAL(Refund_Authorization_Limit__c , &quot;Level 7&quot;) , $Setup.CEC_Cheque_Authorization_Limit__c.Level_7__c, null )))))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Category__c</fullName>
        <description>PC_Categories</description>
        <label>PC_Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pass031212__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Last Password report upload for 3rd December 2012 - Post QMF trigger</description>
        <label>Pass031212</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_Type__c</fullName>
        <description>Unilever Person Type imported from ADAM field: unileverIdentityTypeDescription</description>
        <inlineHelpText>Your Unilever Person Type. This field is automatically populated/updated for Unilever users each week.</inlineHelpText>
        <label>Person Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category_Skills_List2__c</fullName>
        <description>CEC: This field holds the list of all Product Category skills from the multi-select picklist</description>
        <label>Product Category Skills List2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category_Skills_List__c</fullName>
        <description>CEC: This field holds the list of all Product Category skills from the multi-select picklist</description>
        <label>Product Category Skills List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category Skill</label>
        <picklist>
            <controllingField>Market__c</controllingField>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee &amp; Snacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deodorants &amp; Fragrances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dressings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice Cream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Corporate Home Care Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Corporate Personal Care Cat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent and Finance Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plantations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestige Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Cleaning Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savoury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spreads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tea and Soy &amp; Fruit Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Purification Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weight Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deoleo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R &amp; B Foods</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Quality_Check_Percentage__c</fullName>
        <inlineHelpText>CEC field, used to specify the level of emails randomly select for approval</inlineHelpText>
        <label>Quality Check Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Refund_Authorization_Limit__c</fullName>
        <description>CEC: Refund Authorization Limit for Advisor</description>
        <label>Refund Authorization Limit</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>SessionId</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>